--- a/package.json
+++ b/package.json
@@ -14,22 +14,25 @@
     "@babel/preset-env": "^7.1.6",
     "autoprefixer": "^9.4.3",
     "babel-loader": "^8.0.4",
-    "copy-webpack-plugin": "^4.6.0",
-    "css-loader": "^1.0.1",
-    "eslint": "^5.6.1",
-    "eslint-config-standard": "^12.0.0",
+    "copy-webpack-plugin": "^5.0.4",
+    "css-loader": "^3.2.0",
+    "eslint": "^6.1.0",
+    "eslint-config-standard": "^13.0.1",
     "eslint-plugin-import": "^2.14.0",
-    "eslint-plugin-node": "^7.0.1",
+    "eslint-plugin-node": "^9.1.0",
     "eslint-plugin-promise": "^4.0.1",
     "eslint-plugin-standard": "^4.0.0",
     "less": "^3.9.0",
-    "less-loader": "^4.1.0",
+    "less-loader": "^5.0.0",
     "postcss": "^7.0.7",
     "postcss-loader": "^3.0.0",
     "precss": "^4.0.0",
-    "style-loader": "^0.23.1",
+    "style-loader": "^1.0.0",
     "webpack": "^4.26.1",
     "webpack-cli": "^3.1.2",
-    "webpack-pwa-manifest": "^3.7.1"
+    "webpack-pwa-manifest": "^4.0.0"
+  },
+  "dependencies": {
+    "normalize.css": "^8.0.1"
   }
 }
