--- a/package.json
+++ b/package.json
@@ -5,12 +5,14 @@
   "main": "index.js",
   "repository": "github:mikehodgson/skeletor",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start:dev": "./node_modules/.bin/webpack-dev-server"
   },
   "author": "Mike Hodgson",
   "license": "MIT",
   "devDependencies": {
     "@babel/core": "^7.1.6",
+    "@babel/plugin-transform-runtime": "^7.6.2",
     "@babel/preset-env": "^7.1.6",
     "autoprefixer": "^9.4.3",
     "babel-loader": "^8.0.4",
@@ -30,6 +32,10 @@
     "style-loader": "^0.23.1",
     "webpack": "^4.26.1",
     "webpack-cli": "^3.1.2",
+    "webpack-dev-server": "^3.8.2",
     "webpack-pwa-manifest": "^3.7.1"
+  },
+  "dependencies": {
+    "@babel/runtime": "^7.6.2"
   }
 }
