--- a/package.json
+++ b/package.json
@@ -1,42 +1,40 @@
 {
-  "name": "app",
+  "name": "application_name",
   "version": "1.0.0",
-  "description": "description goes here",
+  "description": "application description",
   "main": "index.js",
   "repository": "github:mikehodgson/skeletor",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start:dev": "./node_modules/.bin/webpack-dev-server"
+    "start": "node_modules/.bin/webpack-dev-server",
+    "build": "webpack"
   },
   "author": "Mike Hodgson",
-  "license": "MIT",
+  "license": "ISC",
   "devDependencies": {
-    "@babel/core": "^7.6.2",
-    "@babel/plugin-transform-runtime": "^7.6.2",
-    "@babel/preset-env": "^7.6.2",
-    "autoprefixer": "^9.6.1",
+    "@babel/core": "^7.6.4",
+    "@babel/preset-env": "^7.6.3",
+    "autoprefixer": "^9.6.5",
     "babel-loader": "^8.0.6",
+    "babel-minify-webpack-plugin": "^0.3.1",
+    "babel-polyfill": "^6.26.0",
+    "clean-webpack-plugin": "^3.0.0",
     "copy-webpack-plugin": "^5.0.4",
     "css-loader": "^3.2.0",
-    "eslint": "^6.1.0",
-    "eslint-config-standard": "^13.0.1",
-    "eslint-plugin-import": "^2.18.2",
-    "eslint-plugin-node": "^9.1.0",
-    "eslint-plugin-promise": "^4.2.1",
-    "eslint-plugin-standard": "^4.0.1",
     "less": "^3.10.3",
     "less-loader": "^5.0.0",
+    "lodash-webpack-plugin": "^0.11.5",
     "postcss": "^7.0.18",
     "postcss-loader": "^3.0.0",
     "precss": "^4.0.0",
     "style-loader": "^1.0.0",
-    "webpack": "^4.41.0",
-    "webpack-cli": "^3.1.2",
+    "ts-loader": "^6.2.0",
+    "tslint": "^5.20.0",
+    "typescript": "^3.6.4",
+    "webpack": "^4.41.1",
+    "webpack-cli": "^3.3.9",
     "webpack-dev-server": "^3.8.2",
-    "webpack-pwa-manifest": "^3.7.1"
+    "webpack-pwa-manifest": "^4.1.0"
   },
-  "dependencies": {
-    "@babel/runtime": "^7.6.2",
-    "normalize.css": "^8.0.1"
-  }
+  "dependencies": {}
 }
